chore: update dependencies and bump version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.13"
-financepype = "^0.1.0"
+financepype = "0.1.6"
 web3 = "^7.6.1"
 solders = "^0.23.0"
 solana = "^0.36.3"
+eth-account = "^0.13.5"
+mnemonic = "^0.21"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
