--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ solders = "^0.23.0"
 solana = "^0.36.3"
 eth-account = "^0.13.5"
 mnemonic = "^0.21"
+aiohttp = "^3.9.0"
+python-dotenv = "^1.2.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
