--- a/common/hardhat/package.json
+++ b/common/hardhat/package.json
@@ -24,6 +24,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/contracts": "^5.2.0",
+    "dotenv": "^16.4.5",
     "hardhat": "^2.22.18",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.12"
